--- a/style.css
+++ b/style.css
@@ -73,10 +73,11 @@ body {
     background-color: #f5d400;
     border: 0;
     border-radius: 5px;
-    margin: 20px 0 10px 0;
+    margin: 20px 3px;
     justify-self: flex-end;
     font-weight: bolder;
     border: dashed;
+    /* margin: 3px; */
 
 }
 .input-button:hover {
@@ -275,6 +276,11 @@ input[type="text"] {
     margin: 0;
     padding: 0;
     text-shadow: 1px 1px rgba(0, 0, 0, 0.2);
+}
+
+.players {
+    background-color: red;
+
 }
 
 @media (max-width: 600px) {
